Actions and Triggers refactor.

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "readme": "README.md",
   "homepage": "https://github.com/auth0/auth0-deploy-cli#readme",
   "dependencies": {
-    "auth0": "git://github.com/auth0/node-auth0.git#actionsManager",
+    "auth0": "git://github.com/stevezau/node-auth0.git#actionsManager",
     "auth0-extension-tools": "^1.4.4",
     "auth0-source-control-extension-tools": "git://github.com/stevezau/auth0-source-control-extension-tools#tmp_fixes_actions",
     "dot-prop": "^5.2.0",
@@ -43,22 +43,22 @@
     "yargs": "^15.3.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.6",
-    "@babel/plugin-proposal-decorators": "^7.8.3",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/register": "^7.9.0",
+    "@babel/cli": "^7.13.16",
+    "@babel/core": "^7.14.2",
+    "@babel/plugin-proposal-decorators": "^7.14.2",
+    "@babel/preset-env": "^7.14.2",
+    "@babel/register": "^7.13.16",
     "@brightcove/kacl": "^0.1.11",
-    "babel-eslint": "^10.0.0",
+    "babel-eslint": "^10.1.0",
     "babel-plugin-dynamic-import-node": "^2.3.3",
-    "babel-plugin-module-resolver": "^4.0.0",
-    "chai": "^4.1.2",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
-    "cross-env": "^3.1.4",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-import-resolver-babel-module": "^5.1.2",
-    "eslint-plugin-import": "^2.20.2",
+    "cross-env": "^7.0.3",
+    "eslint": "^7.26.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-import-resolver-babel-module": "^5.3.1",
+    "eslint-plugin-import": "^2.23.1",
     "mocha": "^7.2.0",
     "nyc": "^15.0.1",
     "rmdir-sync": "^1.0.1"
