--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,7 @@
   "comments": false,
   "presets": [
     [
-      "env",
+      "@babel/preset-env",
       {
         "targets": {
           "node": "8"
